(nvim, linux) run gutentags on C++ files, install xss-lock

--- a/dot_config/scripts/executable_install_packages.sh.tmpl
+++ b/dot_config/scripts/executable_install_packages.sh.tmpl
@@ -33,7 +33,7 @@ brew bundle --file=~/.config/brew/Brewfile
 # linux equivalent of homebrew casks
 {{ if eq .chezmoi.os "linux" -}}
 # dependencies for computer use
-sudo apt install alacritty i3 rofi brightnessctl flatpak picom polybar rofi feh redshift
+sudo apt install alacritty i3 rofi brightnessctl flatpak picom polybar rofi feh redshift xss-lock
 # for screenshots
 sudo apt install xfce4-screenshooter
 
